--- a/user_interface/mapDesign/package.json
+++ b/user_interface/mapDesign/package.json
@@ -2,11 +2,14 @@
   "name": "fishbook",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://kyrollos2.github.io/HackNJIT",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.3.1",
